# tidsmatare

./: CMakeLists.txt  README.md  function_timer_base.cpp  function_timer_base.h  main-entry-point.cpp
function_analyzer/: CMakeLists.txt  analyzer_base.cpp  analyzer_base.h
function_stopper/: CMakeLists.txt  function_stopper_base.cpp  function_stopper_base.h  function_stopper_base_example.cpp  time_profiler.cpp  time_profiler.h
stopper/: CMakeLists.txt  console_stopper.cpp  console_stopper.h  stopper_base.cpp  stopper_base.h
